# keith-llm

./: .gitignore  CLAUDE.md  README.md  project.txt  pyproject.toml
.github/workflows/: ci.yml
configs/: 125m.yaml  25m.yaml  350m.yaml  500m.yaml  tiny-1m.yaml
data/: sources.yaml
docs/: chatbot.md  future-fixes.md  training.md
scripts/: fetch_seed_data.sh  pull_artifacts.sh  setup_llamacpp.sh  setup_zulu.sh  train_zulu.sh
src/keith_llm/: __init__.py  cli.py  config.py  constants.py  generate.py  llm.py  model.py
src/keith_llm/data/: __init__.py  archive.py  audit.py  binarize.py  classify.py  clean.py  convert.py  corpus.py  dedup.py  dedup_report.py  docs.py  extract_cache.py  fetch_generic.py  fivetools.py  ingest.py  llm_clean.py  ocr.py  pdf_layout.py
src/keith_llm/export/: __init__.py  gguf_export.py  ollama.py  quantize.py
src/keith_llm/sft/: __init__.py  build.py  chat.py  format.py  loader.py  monster_qa.py  seed.jsonl  synth.py  trainer.py
src/keith_llm/tokenizer/: __init__.py  train.py  wrapper.py
src/keith_llm/train/: __init__.py  checkpoint.py  data_loader.py  loop.py  lr.py  metrics.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/soak/: leakcheck.py  test_soak_generate.py  test_soak_train.py
tests/unit/: test_archive.py  test_audit.py  test_binarize.py  test_classify.py  test_classify_cli.py  test_clean.py  test_config.py  test_convert.py  test_corpus.py  test_dedup.py  test_dedup_report.py  test_docs.py  test_extract_cache.py  test_fetch_generic.py  test_fivetools.py  test_generate.py  test_gguf.py  test_ingest.py  test_llm_clean.py  test_llm_synth.py  test_model.py  test_ocr.py  test_pdf_layout.py  test_sft_chat.py  test_sft_dataset.py  test_sft_loader.py  test_sft_trainer.py  test_tokenizer.py  test_train.py
