[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "keith-llm"
version = "0.1.0"
description = "Small-LLM tool stack for generating fantasy TTRPG adventures and rule systems"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "beknar" }]
dependencies = [
    "torch>=2.7",
    "numpy>=1.26",
    "tokenizers>=0.19",
    "pyyaml>=6.0",
    "gguf>=0.10",
    "pypdf>=4.0",
    "pdfplumber>=0.11",
    "ftfy>=6.1",
    "psutil>=5.9",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]
# OCR for scanned/image-only PDFs; also needs the system `tesseract` binary.
ocr = ["pypdfium2>=4.0", "pytesseract>=0.3.10"]
# `keith-llm convert` (HTML→text, image→OCR, clumped-word repair). Includes the
# OCR deps; also needs the system `tesseract` binary for image/scan OCR.
convert = [
    "beautifulsoup4>=4.12",
    "wordninja>=2.0",
    "pypdfium2>=4.0",
    "pytesseract>=0.3.10",
    "striprtf>=0.0.26",
    "mobi>=0.3.3",
]
# `keith-llm fetch-generic`: stream openly-licensed generic corpora from the HF CDN.
fetch = ["datasets>=2.14"]

[project.scripts]
keith-llm = "keith_llm.cli:main"

[project.urls]
Repository = "https://github.com/beknar/keith-llm"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"keith_llm.sft" = ["*.jsonl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end pipeline tests (kept fast enough for CI)",
    "soak: long-running memory-leak tests, excluded from CI",
]
addopts = "-m 'not soak'"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
